--- a/(Kaggle)Netflix_Shows/Netflix_BokovMM.ipynb
+++ b/(Kaggle)Netflix_Shows/Netflix_BokovMM.ipynb
@@ -43,8 +43,7 @@
         "id": "JYeFv80TV21w"
       },
       "source": [
-        "Netflix за последние 5-10 лет обзавелись большим количеством зрителей. С увеличением числа зрителей увеличилось и разнообразие шоу. Соответственно, перед аналитиками из киноиндустрии встала задача исследования данных с рейтингами различных сериалов.  \n",
-        "В данном задании вам предстоит провести визуальный анализ датасета **1000 Netflix Shows** (по состоянию на 11.06.2017) и сделать выводы.  \n",
+        "Датасета **1000 Netflix Shows** (по состоянию на 11.06.2017). \n",
         "\n"
       ]
     },
