--- a/(Kaggle)Netflix_Shows/Netflix_BokovMM.ipynb
+++ b/(Kaggle)Netflix_Shows/Netflix_BokovMM.ipynb
@@ -43,7 +43,7 @@
         "id": "JYeFv80TV21w"
       },
       "source": [
-        "Датасета **1000 Netflix Shows** (по состоянию на 11.06.2017). \n",
+        "Датасет **1000 Netflix Shows** (по состоянию на 11.06.2017). \n",
         "\n"
       ]
     },
@@ -69,31 +69,13 @@
         "id": "coqxjUJY4D4B"
       },
       "source": [
-        "## Требования к групповому проекту\n",
-        "\n",
-        "В качестве результата ваша группа должна получить презентацию и защитить ее на дополнительном занятии.  \n",
-        "Ссылка на шаблон к презентации: лежит рядом с заданием в классруме.  \n",
-        "Вы можете менять оформление презентации, но помните, что результат должен быть релевантен для демонстрации заказчику. Например, вставлять в презентацию строчки кода или злоупотреблять скринами блокнота не стоит :)\n",
-        "\n",
-        "Помимо презентации, каждому из участников проекта нужно будет сдать свой notebook c решением на проверку. Наши ассистенты проверять ваш код, визуализацию и выводы.\n",
-        "\n",
-        "### Вопросы, на которые нужно ответить в презентации:\n",
+        "Вопросы\n",
         "- Сколько рейтинговых групп представлено в данных?\n",
         "- Какие оценки пользователи ставят чаще всего?\n",
         "- Какие оценки пользователи ставят в среднем?\n",
         "- В какие годы были запущены шоу?\n",
         "- Можно ли сделать вывод, что 2017 год успешнее для Netflix?\n",
         "- В каких рейтинговых группах запущены шоу на Netflix?\n",
-        "- Выберите любое шоу (например, самое понравившееся) и составьте его описательный портрет. На какие вопросы о нем вам было бы интересно ответить, если бы вы были заказчиком? Ответьте на эти вопросы :)\n",
-        "\n",
-        "Вопросы ниже помогут вам ответить на вопросы из презентации и сопроводить выводы релевантной визуализацией.\n",
-        "\n",
-        "Любой хороший Data Scientist должен уметь работать в команде, поэтому распределение ваших усилий в проекте остается за вами. Как пример, вы можете распределить вопросы/слайды между собой.\n",
-        "\n",
-        "### Полезные замечания и советы\n",
-        "- Следите за тем, чтобы все графики на слайдах можно было прочитать даже без ваших комментариев;\n",
-        "- Не нужно делать просто текстовые слайды;\n",
-        "- Не обязательно ограничиваться представленным датасетом. У вас есть весь интернет, чтобы найти дополнительную информацию и проверить ваши гипотезы. Дерзайте!\n"
       ]
     },
     {
