--- a/(Kaggle)Netflix_Shows/Netflix_BokovMM.ipynb
+++ b/(Kaggle)Netflix_Shows/Netflix_BokovMM.ipynb
@@ -75,7 +75,7 @@
         "- Какие оценки пользователи ставят в среднем?\n",
         "- В какие годы были запущены шоу?\n",
         "- Можно ли сделать вывод, что 2017 год успешнее для Netflix?\n",
-        "- В каких рейтинговых группах запущены шоу на Netflix?\n",
+        "- В каких рейтинговых группах запущены шоу на Netflix?\n"
       ]
     },
     {
