--- a/DLS/telegram_bot/README
+++ b/DLS/telegram_bot/README
@@ -1,5 +1,16 @@
+@Michael (id 5182590043) (HH  https://hh.ru/resume/87320bd3ff0c157ed40039ed1f363165373134)
+
+Каталог downloads - туда скачиваются картинки пользователей  {user_id}_fileномер
+Катклог styles - туда скачиваются стили пользователей {user_id}_телеграмidфайла
+Оба каталога должны лежать рядом с исполняемым
 styletransfer_fastapi_buttons.py
 Основной код АПП. Певая часть: модель стилизации, которая обрабатывает пары картинок при взаимодействии с ботом. 
 Сам бот(вторая часть)
+
+Необходимо задать токен бота, доменное имя, Пути к картинкам(input,output_image которые как примеры отображаются по /start).
+Для асинхронной реализации необходим асинхронный фреймворк, а они плохо взаимодействуют со стандартными телеграм пулингом(start_pooling) и им нужны вебхуки.
+Для установки вебхуков необходимо доменное имя того места где крутится бот+доступ по порту+ссл. В даннном случае используется бесплатный Ngrok который преоставляет доменное имя.
+
+
 Training_model_onnx.py
 модель для альтернативного обучения нейросети под конкретное изображение и ее сериализация, может быть интегрировано в styletransfer_fastapi_buttons.py
