--- a/DLS/telegram_bot/README
+++ b/DLS/telegram_bot/README
@@ -1,5 +1,5 @@
 @Michael (id 5182590043) (HH https://hh.ru/resume/87320bd3ff0c157ed40039ed1f363165373134)
-
+@serenity_dawn_bot
 Каталог downloads - туда скачиваются картинки пользователей  {user_id}_fileномер
 Катклог styles - туда скачиваются стили пользователей {user_id}_телеграмidфайла
 Оба каталога должны лежать рядом с исполняемым
